tests/snapshots/integration_tests__snapshot_tests__array_init_ite_dupl.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(& path)
---
BenchmarkResult {
    example_name: "examples/array/array_init_ite_dupl.vmt",
    status: Panic,
    used_instantiations: [],
}
